<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.addWorkoutFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/workoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/workoutDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/workoutDescription"
            android:layout_width="217dp"
            android:layout_height="115dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutTitle"
            app:layout_constraintVertical_bias="0.366" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="143dp"
            android:layout_height="75dp"
            android:layout_marginBottom="148dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutDescription"
            app:layout_constraintVertical_bias="0.791" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>