<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.workoutFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/workoutName"
            android:layout_width="356dp"
            android:layout_height="84dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="337dp"
            android:layout_height="83dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.239" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="367dp"
            android:layout_height="317dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <Button
            android:id="@+id/playPauseButton"
            android:layout_width="159dp"
            android:layout_height="63dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="155dp"
            android:layout_height="66dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="@color/green"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="158dp"
            android:layout_height="68dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>