<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.playWorkoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/workoutName"
            android:layout_width="262dp"
            android:layout_height="46dp"
            android:layout_marginBottom="52dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="92sp"
            app:layout_constraintBottom_toTopOf="@+id/stopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277" />

        <Button
            android:id="@+id/playPauseButton"
            android:layout_width="159dp"
            android:layout_height="63dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/green"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="155dp"
            android:layout_height="66dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/red"
            android:text="@string/stop"
            app:iconTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/red" />

        <TextView
            android:id="@+id/currentExercise"
            android:layout_width="280dp"
            android:layout_height="64dp"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.291" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.651" />

        <TextView
            android:id="@+id/nextExercise"
            android:layout_width="229dp"
            android:layout_height="46dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="101dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/stopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="273dp"
            android:layout_height="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.569" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>